@@ -1,0 +1,5 @@
+list([0 for y in list(range(10))])  # [consider-using-generator]
+tuple([0 for y in list(range(10))])  # [consider-using-generator]
+sum([y**2 for y in list(range(10))])  # [consider-using-generator]
+min([y**2 for y in list(range(10))])  # [consider-using-generator]
+min([y**2 for y in list(range(10))])  # [consider-using-generator]
