@@ -1,0 +1,6 @@
+Removing ``[ ]`` inside containers should be considered for performance reasons since
+list comprehension will make unnecessary data copies. The performance will be better if
+you are working with really long lists or sets.
+
+Regarding performance it's the same for ``max``, ``min`` and ``sum``: you should consider
+your dataset and your environment. But it's also best practice recommended by pep289.
