@@ -1,0 +1,3 @@
+- `PEP 289 <https://peps.python.org/pep-0289/>`_
+- `Benchmark and discussion for any/all/list/tuple <https://github.com/PyCQA/pylint/pull/3309#discussion_r576683109>`_
+- `Benchmark and discussion for sum/max/min <https://github.com/PyCQA/pylint/pull/6595#issuecomment-1125704244>`_
