@@ -1,2 +1,5 @@
-consider-using-generator:7:0:7:34::Consider using a generator instead 'list(0 for y in list(range(10)))':UNDEFINED
-consider-using-generator:8:0:8:35::Consider using a generator instead 'tuple(0 for y in list(range(10)))':UNDEFINED
+consider-using-generator:10:0:10:34::Consider using a generator instead 'list(0 for y in list(range(10)))':UNDEFINED
+consider-using-generator:11:0:11:35::Consider using a generator instead 'tuple(0 for y in list(range(10)))':UNDEFINED
+consider-using-generator:12:0:12:29::Consider using a generator instead 'sum(x * x for x in range(10))':UNDEFINED
+consider-using-generator:13:0:13:29::Consider using a generator instead 'min(x * x for x in range(10))':UNDEFINED
+consider-using-generator:14:0:14:29::Consider using a generator instead 'max(x * x for x in range(10))':UNDEFINED
