@@ -1,5 +1,2 @@
-use-a-generator:10:0:10:33::Use a generator instead 'any(0 for x in list(range(10)))':UNDEFINED
-use-a-generator:11:0:11:33::Use a generator instead 'all(0 for y in list(range(10)))':UNDEFINED
-use-a-generator:12:0:12:29::Use a generator instead 'sum(x * x for x in range(10))':UNDEFINED
-use-a-generator:13:0:13:29::Use a generator instead 'min(x * x for x in range(10))':UNDEFINED
-use-a-generator:14:0:14:29::Use a generator instead 'max(x * x for x in range(10))':UNDEFINED
+use-a-generator:7:0:7:33::Use a generator instead 'any(0 for x in list(range(10)))':UNDEFINED
+use-a-generator:8:0:8:33::Use a generator instead 'all(0 for y in list(range(10)))':UNDEFINED
